@@ -96,6 +96,10 @@ add_button2(self,pos:tuple,text:str,icon=None,compound='left',fg='#1b1b1b',bg='#
 
 ![](https://github.com/Smart-Space/TinUI/raw/main/image/TinUI按钮2.gif)
 
+除此之外，`button2`还分别延伸出`accentbutton`和`toolbutton`，完全基于`button2`，只是单独用作theme控件名称。
+
+![](https://github.com/Smart-Space/TinUI/raw/main/image/TinUI-button2s.png)
+
 ---
 
 ## checkbutton
